# Uncertainty-2D3DRegi

./: README.md
apps/: CMakeLists.txt
apps/hip_surgery/data_gen_2d_3d_assess/: CMakeLists.txt  xreg_data_gen_2d_3d_assess_main.cpp
apps/hip_surgery/minimal_test/: CMakeLists.txt  xreg_minimal_test_main.cpp
apps/hip_surgery/sample_single_view_regi_2d_3d/: xreg_sample_single_view_regi_2d_3d_main.cpp
apps/hip_surgery/simulate_single_view_regi_2d_3d/: CMakeLists.txt  xreg_simulate_single_view_regi_2d_3d_main.cpp
apps/image_io/: CMakeLists.txt
